2003-05-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_450.xml: Updated text and added instructions
	  for head alignment.

2003-05-21  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_450.xml, printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2250TN.xml,
	  printer/HP-Business_Inkjet_2280.xml, printer/HP-2500C.xml,
	  printer/HP-2000C.xml, printer/HP-DesignJet_ColorPro_CAD.xml:
	  Updated text for printers without paper type sensor.

	* printer/HP-DeskJet_450.xml, printer/HP-DeskJet_5550.xml,
	  printer/HP-DeskJet_5551.xml, printer/HP-OfficeJet_6105.xml,
	  printer/HP-OfficeJet_6110.xml, printer/HP-PhotoSmart_7345.xml,
	  printer/HP-PhotoSmart_7350.xml, printer/HP-PhotoSmart_7550.xml,
	  printer/HP-PSC_2110.xml, printer/HP-PSC_2150.xml,
	  printer/HP-PSC_2210.xml: Added remark that full-bleed only works
	  on Oufuku-Hagaki and smaller paper sizes.
	
2003-05-19  David Suffield <david.suffield@hp.com>

	* printer/HP-PSC_1200.xml, HP-PSC_1110.xml, HP-PSC_1100.xml,
	  HP-OfficeJet_6105.xml, HP-OfficeJet_5105.xml,
	  HP-DeskJet_9300.xml HP-OfficeJet_5110.xml,
	  HP-OfficeJet_5110xi.xml, HP-OfficeJet_6110.xml HP-PSC_1205.xml,
	  HP-PSC_1210.xml: Added/updated HP PSC 1100 series, PSC 1200,
	  Deskjet 9300, Officejet 5100 series and Officejet 6100 series.

2003-05-18  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/lm1100-Brightness.xml: Set default brightness of Lexmark
	  1100 to 100, 255 is too high.

2003-05-15  Tim Waugh  <twaugh@redhat.com>

	* db/source/printer/HP-DeskJet_5550.xml: Added Device ID
	  information.

2003-05-09  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Lots of small corrections.

2003-05-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1005.xml, printer/HP-LaserJet_1150.xml,
	  printer/HP-Color_LaserJet_1500.xml, driver/ljet4.xml,
	  driver/lj4dith.xml, driver/foo2zjs.xml, driver/pbmtozjs.xml,