@@ -9,7 +9,7 @@
 	<arg_spot>A</arg_spot>
 	<arg_required />
 	<arg_substitution />
-	<arg_proto>-s%s </arg_proto>
+	<arg_proto>-d%s </arg_proto>
     </arg_execution>
     <constraints>
 	<constraint sense="true">
