@@ -25,7 +25,6 @@
 	    <partno>1710517-008</partno>
 	    <partno>1710522-001</partno>
 	    <partno>1710520-001</partno>
-	    <!--one or more "partno" elements.-->
 	</consumables>
     </mechanism>
     <url>http://www.minolta-qms.com/products/color/mc2300DL/index.asp</url>
@@ -34,7 +33,15 @@
 	<!--no pjl--><!--No "text"?-->
     </lang>
     <autodetect>
-	<!--  HOW DO I SPECIFY SNMP AUTODETECT???????? -->
+	<parallel>
+	    <ieee1284>CLASS:PRINTER;MODEL:magicolor 2300 DL;MANUFACTURER:MINOLTA-QMS;COMMAND SET:ZJS,PJL;</ieee1284>
+	    <manufacturer>MINOLTA-QMS</manufacturer>
+	    <model>magicolor 2300 DL</model>
+	    <commandset>ZJS,PJL</commandset>
+	</parallel>
+	<snmp>
+	    <description>MINOLTA-QMS magicolor 2300 DL</description>
+	</snmp>
     </autodetect>
     <functionality>B</functionality>
     <driver>foo2zjs</driver>
