@@ -1,3 +1,10 @@
+2003-05-28  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Minolta-magicolor_2300_DL.xml, opt/foo2zjs-Duplex.xml:
+	  Added auto-detection info for the Minolta magicolor 2300 DL and
+	  fixed a bug in the "Duplex" option of the "foo2zjs" driver
+	  (thanks to Rick Richardson for the patch).
+
 2003-05-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-DeskJet_450.xml: Updated text and added instructions
